# 42_cursus

./: .gitignore  .gitmodules  README.md  ft_memset.c
01_libft/: README.md  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_strlcat.c  ft_strncmp.c  ft_strnstr.c  libft.h
02_born2beroot/: README.md
03_get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c
04_ft_printf/: .gitignore  Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_utils.c  main.c
05_so_long/: .gitignore  Makefile  README.md  cmd.txt  enemy_movement.c  enemy_movement_utils.c  events_hooks.c  get_next_line.c  get_next_line_utils.c  images.c  loops.c  main.c  map.ber  map_validation.c  map_validation_utils.c  player_movement.c  player_movement_utils.c  render_map.c  render_map_tiles.c  render_map_utils.c  render_text.c  save_map.c  screen_render.c  so_long  so_long.c  so_long.h  so_long_utils.c
06_exam_02/: README.md  inter.c  inter_subject.txt  union.c  union_subject.md
07_minitalk/: Makefile  README.md  client.c  ft_client.c  ft_printf_utils.c  ft_server.c  minitalk.h  minitalk_utils.c  minitalk_utils_2.c  server.c
08_push_swap/: Makefile  README.md  (+21 more)
29_learn2slither/: .env  .flake8  Dockerfile  README.md  docker-compose.yml  notes.md  pyproject.toml  requirements.txt  subject.txt
29_learn2slither/board/: MapGenerator.py  generate.py  main.py  requirements.txt
29_learn2slither/constants/: __init__.py  board.py  game.py  palette.py  path.py  settings.py  train.py  ui.py
29_learn2slither/gui/: main.py
29_learn2slither/settings/: map.json  train.json
29_learn2slither/src/: generate_map.py  loop.py
29_learn2slither/src/agent/: Agent.py  TrainStats.py  __init__.py
29_learn2slither/src/board/: MapGenerator.py
29_learn2slither/src/game_logic/: Game.py  __init__.py  utils.py
29_learn2slither/src/gui/: Block.py  Board.py  BoardBlock.py  ContextData.py  Controls.py  Data.py  DataFrame.py  Game.py  GameData.py  Gui.py  GuiBlock.py  LandingPage.py  MapBlock.py  PlayPage.py  Root.py  SettingsPage.py  TrainData.py  TrainPage.py  __init__.py  main.py
29_learn2slither/src/gui/components/: AgentData.py  Board.py  BoardBlock.py  ContextData.py  Controls.py  DataFrame.py  GameData.py  TrainData.py  TrainSettings.py
29_learn2slither/src/loop/: __init__.py  render_game_mode.py  render_landing.py  render_train_mode.py  render_train_settings.py  render_training_mode.py
29_learn2slither/src/map/: MapGenerator.py  __init__.py
29_learn2slither/src/pages/: __init__.py  render_game_mode.py  render_landing.py  render_train_mode.py  render_train_settings.py
29_learn2slither/src/settings_parser/: SettingsParser.py  __init__.py
29_learn2slither/src/training/: Training.py  __init__.py
(+1413 files in other folders)
