[project]
name = "learn2slither"
version = "0.1.0"
description = "Teach an agent to play Snake with reinforcement learning"
authors = [
    { name = "Nicolas Gasco", email = "nicolas.gasco92@gmail.com" }
]
dependencies = [
    "flake8>=7.2.0",
    "dotenv>=0.9.9",
    "numpy>=2.2.5",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/", "constants/", "settings/", "maps/"] 

[tool.black]
line-length = 79