[project]
name = "learn2slither"
version = "0.1.0"
description = "Teach an agent to play Snake with reinforcement learning"
authors = [
    { name = "Nicolas Gasco", email = "nicolas.gasco92@gmail.com" }
]
dependencies = [
    "flake8>=7.2.0",
    "dotenv>=0.9.9",
    "numpy>=2.2.5",
    "black>=25.1.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=7.2.0",
    "black>=25.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "src/gui", "src/settings_parser", "src/board", "constants", "settings", "maps"] 

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target-version = ["py313"]

[flake8]
max-line-length = 79
extend-ignore = "E203"

[tool.rye.scripts]
lint = "flake8"
sort = "isort ./"
format = "black ./"